<resources>
    <string name="app_name">SuperHeroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="consulta_asunto">Consulta Asunto</string>
    <string name="sin_traduccion">Sin Traducción</string>
    <string name="cuenta_con_traduccion_al_español">Cuenta con traducción al Español</string>
    <string name="message">message</string>
    <string name="imagen_clickable">imagen_clickable</string>
    <string name="nombre">nombre</string>
    <string name="origen">Origen</string>
    <string name="a_o_creacion">Año Creacion</string>
    <string name="poder">Poder</string>
    <string name="color">Color</string>
    <string name="traduccion">Traduccion</string>
    <string name="imagen_detalle">imagen_detalle</string>
    <string name="asunto">Votación %1$s.</string>
    <string name="cuerpo_msn">Hola, \n\nQuiero que el siguiente super heroe %1$s aparezca en la nueva edición de biografias animadas.
    \n Numero contacto:____________\n\n Gracias.</string>
    <string name="direccion_msn">info@prueba.cl</string>
    <string name="Send_Mail">Send Mail</string>
    <string name="id">id</string>
</resources>